# conarr-backend

./: .cspell.json  .editorconfig  .env.sample  .gitignore  .lycheeignore  .markdownlint.json  .mega-linter.yml  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  README.md  Taskfile.yml  entrypoint.sh  kics.yml  pyproject.toml  pyrightconfig.json  renovate.json  sonar-project.properties
.config/taskfiles/: bootstrap.yml  install.yml  tests.yml  tools.yml
.devcontainer/: Dockerfile  devcontainer.env.sample  devcontainer.json  docker-compose.yml  pip.conf
.github/workflows/: backend.yml  commitizen.yml  mega-linter.yml  renovate.yml
.linters/: .bandit.yml  .cspell.json  .flake8  .jscpd.json
bruno/pyconarr/: .env.sample  bruno.json  template.env
bruno/pyconarr/Jellyfin/System/: Info-public.bru  Info.bru
bruno/pyconarr/Jellyfin/Users/: AuthenticateByName.bru  list_users.bru
bruno/pyconarr/conarr-backend/Health/: root.bru  version.bru
bruno/pyconarr/environments/: Jellyfin_PR.bru  wiremock.bru
config/: log.yaml  pyconarr.yml.sample
pyconarr/: main.py
pyconarr/libs/: config.py  docs.py  jellyfin.py  route.py
tests/: load_test_config.py  test_main.py
tests/components/: test_components.py
tests/inputs/: input_login_admin.json  input_login_user.json  input_login_user_wrong_password.json
tests/integrations/: test_integrations.py
tests/responses/: response_list_users.json  response_login_admin_user.json  response_login_standard_user.json  response_system_info_public.json
tests/units/: test_units.py
wiremock/__files/jellyfin/Users/: GET_root.json  (+2 more)
(+13 files in other folders)
