[tool.poetry]
name = "pyconarr"
version = "0.1.0"
readme = "README.md"
description = ""
license = "GPLv3"

authors = ["Clem <author@clem.fr>", "Tsuna <admin@tsuna.fr>"]


[tool.poetry.dependencies]
python = ">=3.8"
fastapi = "0.109.2"
uvicorn = "^0.27.0.post1"
toml = "^0.10.2"
setuptools = "^69.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
coverage = "^7.4.1"
httpx = "^0.26.0"
pytest-cov = "^4.1.0"
commitizen = "^3.15.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src", "tests"]
venvPath = "/venvs"
venv = "pyright"
